--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".application.myApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_auto_icon"
         android:label="@string/app_name"
@@ -24,7 +25,7 @@
          MediaBrowser (for browsing) and MediaController (for playback control)
        -->
         <service
-            android:name=".MyMusicService"
+            android:name=".auto.MyMusicService"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService" />
