--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    
+    def room_version = "2.1.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     implementation 'com.google.android.exoplayer:exoplayer:2.10.1'
     implementation 'com.android.support:design:28.0.0'
