--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".application.myApplication"
+        android:name=".application.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_auto_icon"
         android:label="@string/app_name"
